--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .image-generator {
-    height: 40vh;
+    height: 45vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -135,8 +135,8 @@
 }
 
 .image-gallery .img-card.loading img {
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
 }
 
 .image-gallery .img-card .download-btn {
@@ -216,8 +216,61 @@
     }
 }
 
-@media screen and (max-width: 500px) {
-    .image-gallery .img-card {
-        width: 100%;
+
+.footer {
+    background: #000;
+    padding: 30px 0px;
+    font-family: 'Play', sans-serif;
+    text-align: center;
+}
+
+.footer .row {
+    width: 100%;
+    margin: 1% 0%;
+    padding: 0.6% 0%;
+    color: gray;
+    font-size: 0.8em;
+}
+
+.footer .row a {
+    text-decoration: none;
+    color: gray;
+    transition: 0.5s;
+}
+
+.footer .row a:hover {
+    color: #fff;
+}
+
+
+
+
+.footer .row a i {
+    font-size: 2em;
+    margin: 0% 1%;
+}
+
+@media (max-width:720px) {
+    .footer {
+        text-align: left;
+        padding: 5%;
+    }
+
+    .footer .row ul li {
+        display: block;
+        margin: 10px 0px;
+        text-align: left;
+    }
+
+    .footer .row a i {
+        margin: 0% 3%;
+    }
+
+
+
+    @media screen and (max-width: 500px) {
+        .image-gallery .img-card {
+            width: 100%;
+        }
     }
 }
